flask-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-app-ingress
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  tls:
  - hosts:
    - sentapp.azuredev.online
    secretName: flask-app-tls
  rules:
  - host: sentapp.azuredev.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flask-lb
            port:
              number: 80
